DIG-8491 fixed image view on mobile devices

--- a/src/core/organisms/comparator-table/comparator-table.scss
+++ b/src/core/organisms/comparator-table/comparator-table.scss
@@ -39,7 +39,7 @@ $comparator-image-height: 14rem;
       }
 
       .card-image {
-        height: auto;
+        height: 25vh;
         border-radius: $border-radius-small;
       }
 
